--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /* 
 
     You can write your own styles here...
@@ -10,3 +9,53 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.traffic-light {
+    background: black;
+    padding: 10px;
+    display: inline-block;
+    margin-left: 300px;
+    margin-top: 50px;
+    border-radius: 15px;
+
+}
+
+.light {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: white;
+}
+
+.red {
+    background: red;
+}
+
+.yellow {
+    background: yellow;
+    margin-top: 10px;
+}
+
+.green {
+    background: green;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.glow1 {
+    box-shadow: 0px 0px 9px 4px #e96942;
+}
+.glow2 {
+    box-shadow: 0px 0px 9px 4px #deec5f;
+}
+.glow3 {
+    box-shadow: 0px 0px 9px 4px #48ec42;
+}
+.glow4 {
+    box-shadow: 0px 0px 9px 4px #f399ec;
+}
+.purple{
+    background-color: purple;
+    margin-top: 10px;
+}
+
