--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,48 +14,91 @@
     background: black;
     padding: 10px;
     display: inline-block;
-    margin-left: 300px;
+    margin-left: 200px;
     margin-top: 50px;
     border-radius: 15px;
-
 }
-
 .light {
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    margin: 15px;
     background-color: white;
 }
-
 .red {
     background: red;
 }
-
 .yellow {
     background: yellow;
     margin-top: 10px;
 }
-
 .green {
     background: green;
     margin-top: 10px;
     margin-bottom: 10px;
 }
-
 .glow1 {
-    box-shadow: 0px 0px 9px 4px #e96942;
+    box-shadow: 0px 0px 20px 20px #e96942;
+    animation: glow 0.8s linear infinite alternate;
 }
 .glow2 {
     box-shadow: 0px 0px 9px 4px #deec5f;
+    animation: glow 0.8s linear infinite alternate;
 }
 .glow3 {
     box-shadow: 0px 0px 9px 4px #48ec42;
+    animation: glow 0.8s linear infinite alternate;
 }
 .glow4 {
     box-shadow: 0px 0px 9px 4px #f399ec;
+    animation: glow 0.8s linear infinite alternate;
 }
-.purple{
+.purple {
     background-color: purple;
     margin-top: 10px;
 }
-
+@keyframes glow {
+    to {
+        box-shadow: 0px 0px 30px 20px rgb(235, 238, 230);
+    }
+}
+.boton {
+    margin-left: 140px;
+    margin-top: 200px;
+    position: fixed;
+    background: rgb(167, 39, 167);
+    color: #fff;
+    padding: 5px 10px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: inline-block;
+    outline: none;
+    border-radius: 5px;
+    border: none;
+    background-size: 120% auto;
+    background-image: linear-gradient(315deg, #b973c2 0%, #6c0f88 75%);
+}
+.css-button-gradient--1:hover {
+    background-position: right center;
+}
+.css-button-gradient--1:active {
+    top: 2px;
+}
+.boton2 {
+    margin-left: 100px;
+    margin-top: 300px;
+    position: fixed;
+    background: rgb(7, 136, 7);
+    color: #fff;
+    padding: 5px 10px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: inline-block;
+    outline: none;
+    border-radius: 5px;
+    border: none;
+    background-size: 120% auto;
+    background-image: linear-gradient(315deg, #7ec292 0%, #094b09 75%);
+}
